# ruc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: audit.yml  ci.yml
src/: commit.rs  init.rs  lib.rs  main.rs  object.rs  tree.rs
tests/: commit.bats  core.bats  helpers.bats  init.bats
