[package]
name = "ruc"
version = "0.1.0"
edition = "2021"
authors = ["Miquel Sabaté Solà"]
description = "Learning Git by building my own"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
home = "0.5.5"
lazy_static = "1.4.0"
sha1 = "0.10.5"
